api-gw/nginx/cmbc/f5-manage07/3.2.12/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-3-2-12
  namespace: f5-manage07
  annotations:
    nginx.org/path-regex: "case_sensitive"
spec:
  ingressClassName: nginx
  rules:
  - host: f5manage07.example.com
    http:
      paths:
      - path: /cart/[A-Z0-9]
        pathType: Prefix
        backend:
          service:
            name: cart-svc
            port:
              number: 80
